fixed preloader's z-index

--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -23,7 +23,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 999999999999999999999999999999999999999999;
+  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center;
